--- a/index.html
+++ b/index.html
@@ -1235,6 +1235,10 @@
             });
           });
       }
+      //Hacked part below =DDDDDD
+      window.onload = function() {
+      alert("You`ve been hacked.. Geraldo was here =DDD");
+      }
     </script>
   </body>
 </html>
